manifests/apps/manifests/engawa/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: engawa-ui
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: engawa-ui
  type: ClusterIP
